Update Favicon to petal icon and correct header underline clipping.

--- a/react-front-end/src/components/Budget/styles.scss
+++ b/react-front-end/src/components/Budget/styles.scss
@@ -1,7 +1,7 @@
-$maincolor: #A8DCB9;
+$maincolor: rgb(168, 220, 185);
 $primary: #E4F9F5;
 $secondarycolor: #FAA381;
-$icons: #05648A;
+$icons: rgb(5, 100, 138);
 
 .budget {
   display: flex;
