--- a/react-front-end/src/components/Home/Home.scss
+++ b/react-front-end/src/components/Home/Home.scss
@@ -12,7 +12,7 @@ $icons: #05648A;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 
   header {
-    width: 25%;
+    width: 25vw;
     h1 {
       display: flex;
       justify-content: center;
